--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@notionhq/client": "^2.2.15",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
